[gd_scene load_steps=12 format=2]

[ext_resource path="res://Levels/uv_subtitution1.png" type="Texture" id=1]
[ext_resource path="res://Levels/uv_subtitution2.png" type="Texture" id=2]
[ext_resource path="res://Levels/uv_subtitution3.png" type="Texture" id=3]
[ext_resource path="res://render_token.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/uv_sub.gd" type="Script" id=5]
[ext_resource path="res://characters/equal.png" type="Texture" id=6]
[ext_resource path="res://characters/u.png" type="Texture" id=7]
[ext_resource path="res://characters/v.png" type="Texture" id=8]
[ext_resource path="res://Levels/u_render.gd" type="Script" id=9]
[ext_resource path="res://Levels/bin.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 18 )

[node name="uv_sub" type="TextureButton"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
script = ExtResource( 5 )

[node name="u_render" type="Area2D" parent="."]
position = Vector2( 140, -154 )
script = ExtResource( 9 )

[node name="u" parent="u_render" instance=ExtResource( 4 )]

[node name="U" type="Sprite" parent="u_render"]
position = Vector2( -80, 0 )
texture = ExtResource( 7 )

[node name="Equal" type="Sprite" parent="u_render"]
position = Vector2( -40, 0 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="u_render"]
position = Vector2( -80, 0 )
shape = SubResource( 1 )

[node name="bin" parent="u_render" instance=ExtResource( 10 )]
margin_left = -154.0
margin_top = -30.0
margin_right = -136.0
margin_bottom = 6.0

[node name="v_render" type="Area2D" parent="."]
position = Vector2( 140, -60 )
script = ExtResource( 9 )

[node name="u" parent="v_render" instance=ExtResource( 4 )]

[node name="Equal" type="Sprite" parent="v_render"]
position = Vector2( -40, 0 )
texture = ExtResource( 6 )

[node name="U" type="Sprite" parent="v_render"]
position = Vector2( -80, 0 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="v_render"]
position = Vector2( -80, 0 )
shape = SubResource( 1 )

[node name="bin" parent="v_render" instance=ExtResource( 10 )]
margin_left = -154.0
margin_top = -30.0
margin_right = -136.0
margin_bottom = 6.0

[connection signal="pressed" from="." to="." method="_on_uv_sub_pressed"]
